--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "firebase": "^11.8.1",
     "framer-motion": "^12.16.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
+    "next-i18next": "^15.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-redux": "^9.2.0",
     "uuid": "^11.1.0"
   },
